# clean_excel_back

.github/workflows/: cd.yml  ci.yml
clean_excel/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
clean_excel/docs/: PROJET.md  README.md
clean_excel/src/: main.py
clean_excel/src/config/: __init__.py  llm_factory.py  settings.py
clean_excel/src/domain/: __init__.py
clean_excel/src/infrastructure/: schemas.py
clean_excel/src/infrastructure/services/: __init__.py  anomaly_detector.py  excel_service.py  file_rebuilder.py  schema_detector.py
clean_excel/src/interface/routers/: __init__.py  analyse.py  export.py  upload.py
