[project]
name = "clean-excel"
version = "0.1.0"
description = ""
authors = [
    {name = "kessa99",email = "kipre325@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "langchain-anthropic (>=1.3.5,<2.0.0) ; python_version >= \"3.11\" and python_full_version < \"4.0.0\"",
    "langchain-openai (>=1.1.11,<2.0.0) ; python_version >= \"3.11\" and python_full_version < \"4.0.0\"",
    "langchain-mistralai (>=1.1.2) ; python_version >= \"3.11\" and python_full_version < \"4.0.0\"",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "xlrd (>=2.0.2,<3.0.0)"
]

[tool.poetry]
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
